# lie-nn

./: .gitignore  ChangeLog.md  IDEAS  LICENSE  README.md  TODO.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
lie_nn/: __init__.py  _change_basis.py  _direct_sum.py  _irrep.py  _irrep_family.py  _irreps.py  _o3_real.py  _reduced_rep.py  _rep.py  _reps.py  _sl2.py  _so13.py  _so3_real.py  _su2.py  _su2_real.py  _sun.py  _tensor_product.py  finite.py  test.py  util.py  utils.py
lie_nn/_src/: change_algebra.py  change_algebra_test.py  change_basis.py  clebsch_gordan.py  clebsch_gordan_test.py  conjugate.py  direct_sum.py  finite.py  group_product.py  group_product_test.py  infer_change_of_basis.py  infer_change_of_basis_test.py  irrep.py  irrep_test.py  is_irreducible.py  is_unitary.py  jax_utils.py  lie_algebra_utils.py  multiply.py  project.py  properties.py  real.py  reduce.py  reduce_test.py  reduced_rep.py  reduced_tensor_product.py  reduced_tensor_product_test.py  rep.py  symmetric_tensor_power.py  tensor_product.py  tensor_product_test.py  tests.py  util.py  util_test.py  utils.py
lie_nn/groups/: __init__.py  _abc_rep.py  _abstract_rep.py  _irrep.py  _o3_real.py  _sl2.py  _so13.py  _so3_real.py  _su(n).py  _su2.py  _su2_real.py  _sun.py  o3_real.py  sl2.py  so13.py  so3_real.py  su2.py
lie_nn/irreps/: __init__.py  _o3_real.py  (+6 more)
tests/: change_algebra_test.py  clebsch_gordan_test.py  group_product_test.py  irrep_test.py  reduce_test.py  rep_test.py  so13_test.py  sun_test.py  tensor_product_test.py  util_test.py  utils_test.py
(+23 files in other folders)
