[flake8]
max-line-length = 127
select = B,C,E,F,W,T4,B9
ignore = F811, E741, W503, E203
max-complexity = 21
exclude = .eggs,*.egg,build,dist,docs/_build,notebook

[pydocstyle]
select = D415, D403

[metadata]
name = lie_nn
version = attr: lie_nn.__version__
description = Tensor Products for Lie Groups.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lie-nn/lie-nn
classifiers =
    Programming Language :: Python :: 3.7
license = MIT License
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    multipledispatch
